lab1/Test/L1-A-4-90.cmm
P9Gw1 I ( ) {
}
int T2lo5uPyC0kG1DbI , aX , AFinZgdtGRVQaRtghoX 1285025955 
  ] [ 492667503 ] 


;
float D_GBQCmu8OiA7 ( || ) {
}
== return 